tests/snapshots/snapshots__clay_basic_w120.snap
---
source: tests/snapshots.rs
expression: output
---
[1;38;2;210;140;40m# Basic Markdown Rendering[0m

[38;2;190;180;160mThis document demonstrates [0m[1;38;2;190;180;160mmdx[0m[38;2;190;180;160m’[0m[38;2;190;180;160ms core markdown rendering capabilities.[0m

[1;38;2;180;90;60m## Text Formatting[0m

[38;2;190;180;160mHere is some [0m[1;38;2;190;180;160mbold text[0m[38;2;190;180;160m, some [0m[3;38;2;190;180;160mitalic text[0m[38;2;190;180;160m, and some [0m[2;38;2;160;120;60minline code[0m[38;2;190;180;160m.[0m [38;2;190;180;160mYou can also combine [0m[1;38;2;190;180;160mbold and [0m[3;38;2;190;180;160mnested italic[0m[38;2;190;180;160m for emphasis.[0m

[38;2;120;150;100mVisit the Rust website (https://www.rust-lang.org)[0m[38;2;190;180;160m for more about the language.[0m

[1;38;2;180;90;60m## Code Blocks[0m

[38;2;90;80;60m  [rust][0m
  [38;2;180;142;173mfn[0m[38;2;192;197;206m [0m[38;2;143;161;179mmain[0m[38;2;192;197;206m([0m[38;2;192;197;206m)[0m[38;2;192;197;206m [0m[38;2;192;197;206m{[0m
  [38;2;192;197;206m    [0m[38;2;180;142;173mlet[0m[38;2;192;197;206m greeting [0m[38;2;192;197;206m=[0m[38;2;192;197;206m [0m[38;2;192;197;206m"[0m[38;2;163;190;140mHello from mdx![0m[38;2;192;197;206m"[0m[38;2;192;197;206m;[0m
  [38;2;192;197;206m    [0m[38;2;192;197;206mprintln![0m[38;2;192;197;206m([0m[38;2;192;197;206m"[0m[38;2;208;135;112m{}[0m[38;2;192;197;206m"[0m[38;2;192;197;206m,[0m[38;2;192;197;206m greeting[0m[38;2;192;197;206m)[0m[38;2;192;197;206m;[0m
  [38;2;192;197;206m}[0m

[38;2;90;80;60m  [python][0m
  [38;2;180;142;173mdef[0m[38;2;192;197;206m [0m[38;2;143;161;179mfibonacci[0m[38;2;192;197;206m([0m[38;2;191;97;106mn[0m[38;2;192;197;206m)[0m[38;2;192;197;206m:[0m
  [38;2;192;197;206m    [0m[38;2;192;197;206ma[0m[38;2;192;197;206m, [0m[38;2;192;197;206mb[0m[38;2;192;197;206m [0m[38;2;192;197;206m=[0m[38;2;192;197;206m [0m[38;2;208;135;112m0[0m[38;2;192;197;206m, [0m[38;2;208;135;112m1[0m
  [38;2;192;197;206m    [0m[38;2;180;142;173mfor[0m[38;2;192;197;206m [0m[38;2;191;97;106m_[0m[38;2;192;197;206m [0m[38;2;180;142;173min[0m[38;2;192;197;206m [0m[38;2;150;181;180mrange[0m[38;2;192;197;206m([0m[38;2;192;197;206mn[0m[38;2;192;197;206m)[0m[38;2;192;197;206m:[0m
  [38;2;192;197;206m        [0m[38;2;192;197;206ma[0m[38;2;192;197;206m, [0m[38;2;192;197;206mb[0m[38;2;192;197;206m [0m[38;2;192;197;206m=[0m[38;2;192;197;206m [0m[38;2;192;197;206mb[0m[38;2;192;197;206m, [0m[38;2;192;197;206ma[0m[38;2;192;197;206m [0m[38;2;192;197;206m+[0m[38;2;192;197;206m [0m[38;2;192;197;206mb[0m
  [38;2;192;197;206m    [0m[38;2;180;142;173mreturn[0m[38;2;192;197;206m [0m[38;2;192;197;206ma[0m

[1;38;2;180;90;60m## Lists[0m

[38;2;190;180;160mUnordered:[0m

  * [38;2;190;180;160mFirst item[0m
  * [38;2;190;180;160mSecond item[0m
  * [38;2;190;180;160mThird item[0m

[38;2;190;180;160mOrdered:[0m

  1. [38;2;190;180;160mStep one[0m
  2. [38;2;190;180;160mStep two[0m
  3. [38;2;190;180;160mStep three[0m

[2;38;2;90;80;60m────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[0m
[38;2;190;180;160mThat[0m[38;2;190;180;160m’[0m[38;2;190;180;160ms the basics. Try [0m[2;38;2;160;120;60mmdx docs/examples/basic.md[0m[38;2;190;180;160m to see it rendered.[0m
