tests/snapshots/snapshots__clay_er_minimal_w120.snap
---
source: tests/snapshots.rs
expression: output
---
[1;38;2;210;140;40m# ER minimal[0m

[38;2;190;180;160mTwo entities with one relationship.[0m

[38;2;180;90;60m+-----------------+[0m            [38;2;180;90;60m+----------------------+[0m
[38;2;180;90;60m|[0m[38;2;190;180;160m User            [0m[38;2;180;90;60m|[0m            [38;2;180;90;60m|[0m[38;2;190;180;160m Order                [0m[38;2;180;90;60m|[0m
[38;2;180;90;60m|-----------------|[0m            [38;2;180;90;60m|----------------------|[0m
[38;2;180;90;60m|[0m[38;2;190;180;160m PK string id    [0m[38;2;180;90;60m|[0m[38;2;120;160;80m||[0m─places──[38;2;120;160;80mo{[0m[38;2;190;180;160m PK string   id       [0m[38;2;180;90;60m|[0m
[38;2;180;90;60m|[0m[38;2;190;180;160m    string email [0m[38;2;180;90;60m|[0m            [38;2;180;90;60m|[0m[38;2;190;180;160m FK string   userId   [0m[38;2;180;90;60m|[0m
[38;2;180;90;60m+-----------------+[0m            [38;2;180;90;60m|[0m[38;2;190;180;160m    datetime placedAt [0m[38;2;180;90;60m|[0m
                               [38;2;180;90;60m+----------------------+[0m
