tests/snapshots/snapshots__clay_er_unicode_w120.snap
---
source: tests/snapshots.rs
expression: output
---
[1;38;2;210;140;40m# ER unicode[0m

[38;2;180;90;60m+-------------------------------------+[0m            [38;2;180;90;60m+-----------------------------------+[0m
[38;2;180;90;60m|[0m[38;2;190;180;160m USER                                [0m[38;2;180;90;60m|[0m            [38;2;180;90;60m|[0m[38;2;190;180;160m ORDER                             [0m[38;2;180;90;60m|[0m
[38;2;180;90;60m|-------------------------------------|[0m            [38;2;180;90;60m|-----------------------------------|[0m
[38;2;180;90;60m|[0m[38;2;190;180;160m PK string id                        [0m[38;2;180;90;60m|[0m[38;2;120;160;80m||[0m─places   [38;2;180;90;60m|[0m[38;2;190;180;160m PK string   id                    [0m[38;2;180;90;60m|[0m
[38;2;180;90;60m|[0m[38;2;190;180;160m    string name  名字 — display name [0m[38;2;180;90;60m|[0m      └────[38;2;120;160;80mo{[0m[38;2;190;180;160m FK string   userId                [0m[38;2;180;90;60m|[0m
[38;2;180;90;60m|[0m[38;2;190;180;160m    string email 電子郵件 address    [0m[38;2;180;90;60m|[0m            [38;2;180;90;60m|[0m[38;2;190;180;160m    datetime placedAt              [0m[38;2;180;90;60m|[0m
[38;2;180;90;60m+-------------------------------------+[0m            [38;2;180;90;60m|[0m[38;2;190;180;160m             下单时间, 以 UTC 为准 [0m[38;2;180;90;60m|[0m
                                                   [38;2;180;90;60m+-----------------------------------+[0m
