tests/snapshots/snapshots__clay_seq_unicode_w120.snap
---
source: tests/snapshots.rs
expression: output
---
[1;38;2;210;140;40m# Sequence unicode[0m

[38;2;180;90;60m┌──────┐[0m                [38;2;180;90;60m┌──────────────┐[0m
[38;2;180;90;60m│[0m [38;2;190;180;160m用户[0m [38;2;180;90;60m│[0m                [38;2;180;90;60m│[0m [38;2;190;180;160mServeur Café[0m [38;2;180;90;60m│[0m
[38;2;180;90;60m└──────┘[0m                [38;2;180;90;60m└──────────────┘[0m
    │                           │
    ╎       [38;2;130;140;110m登录 request[0m        ╎
    │[38;2;120;160;80m─────────────────────────>>[0m│
    ╎        [38;2;130;140;110mRéponse ✓[0m          ╎
    [38;2;120;160;80m<<─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ ─ [0m│
    ╎                   ┌──────────────┐
    │                   │  验证 token  │
    ╎                   └──────────────┘
    │                 ┌─ loop [每分钟] ──┐
    ╎                 │         [38;2;120;160;80m──┐[0m [38;2;130;140;110m心跳 ping[0m
    │                 │         │ [38;2;120;160;80m│[0m      │
    ╎                 │         [38;2;120;160;80m<─┘[0m      │
    │                 └──────────────────┘
